# trace-field-normalize

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/trace_field_normalize/: __init__.py  core.py
src/trace_field_normalize.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_trace_field_normalize.py
